# OpenDAW_MCP

./: .gitignore  .vercelignore  Dockerfile  README.md  README_HTTP.md  fastmcp_server.py  http_mcp_config.json  lambda_handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  storage_manager.py  test_mcp.py  test_mistral_integration.py  vercel.json
api/: index.py  mcp.py  requirements.txt
deploy/: run.ts
