[project]
name = "opendaw-mcp"
version = "0.1.0"
description = "OpenDAW FastMCP Server - HTTP Streamable MCP Server for AI-assisted music production"
authors = [
    {name = "OpenDAW Team", email = "team@opendaw.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
